--- a/stripe-assignment/src/react/ProductDetails.css
+++ b/stripe-assignment/src/react/ProductDetails.css
@@ -28,7 +28,7 @@
 .h5 {
   width: fit-content;
   height: fit-content;
-  margin-left: auto;
+  margin-left: 300px;
   margin-right: auto;
   margin-top: 30px;
   border-bottom: 2px solid blue;
@@ -40,21 +40,36 @@
 }
 
 .detailstext {
-  background-color: rgb(240, 240, 240);
-  width: 50%;
+  background: #F5F7FF;
+  width: 1064px;
   height: 500px;
   border-top: 1px solid black;
 }
 
 .productimages {
-  width: 50%;
+  width: 855px;
   height: 500px;
   border-top: 1px solid black;
   border-left: none;
 }
 
+.carouselimg {
+  width: 400px;
+  height: 400px;
+  left: 0px;
+  top: 0px;
+  margin-left: 40px;
+  margin-top: 50px;
+}
+
+.carousel {
+  align-items: center;
+  width: 500px;
+}
+
 .detailsdiv {
   display: flex;
+
 }
 
 .day {
@@ -115,4 +130,59 @@
   margin: auto;
   margin-top: 7px;
   margin-bottom: 5px;
+}
+
+.productdetails {
+  position: relative;
+  width: 500px;
+  height: 312px;
+  margin-left: 300px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  display: flex;
+  text-align: justify;
+  /* Color - 7 */
+
+  color: #000000;
+}
+
+.productcategory {
+  position: relative;
+  width: 500px;
+  height: fit-content;
+  margin-left: 300px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+
+  /* Color - 5 */
+
+  color: #A2A6B0;
+
+}
+
+.productname {
+  position: relative;
+  width: 500px;
+  height: fit-content;
+  margin-left: 300px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 48px;
+  /* identical to box height */
+
+
+  color: #000000;
 }
