--- a/stripe-assignment/src/componets/Navbar/Navbar.css
+++ b/stripe-assignment/src/componets/Navbar/Navbar.css
@@ -1,17 +1,17 @@
 .navbar {
   background-color: white;
-  box-shadow: none;
-  align-content: center;
-  height: 92px;
-  top: 10%;
+  position: relative;
+  left: 0%;
+  right: 0%;
+  top: 4.07%;
+  bottom: 87.41%;
 }
 
 .icon {
   width: 3rem;
   height: 3rem;
-  margin-top: 5px;
-  margin-left: 250px;
-  margin-right: 50px;
+  margin-left: 11%;
+  margin-right: 4%;
   fill: blue;
 }
 
@@ -20,14 +20,14 @@
 }
 
 .text {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 1%;
   align-self: center;
   font-family: 'Poppins';
   font-style: normal;
-  font-weight: 600;
+  font-weight: bold;
   font-size: 16px;
-  display: flex;
   align-items: center;
   text-align: center;
 }
@@ -42,21 +42,28 @@
 }
 
 @media screen and (max-width:1000px) {
+  .navbar {
+    position: absolute;
+    top: 6%;
+    width: 100%;
+    z-index: 1;
+    height: fit-content;
+  }
+
   .text {
     display: none;
     margin-top: 40px;
+
   }
 
   .icon {
     right: 0%;
-    margin-top: 40px;
-    margin-right: 10px;
     margin-left: 10px;
   }
 
   .deicon {
     display: flex;
-    margin-top: 40px;
+    margin-top: 0px;
     margin-right: 10px;
   }
 
