--- a/stripe-assignment/src/componets/ProductDetails/ProductDetails.css
+++ b/stripe-assignment/src/componets/ProductDetails/ProductDetails.css
@@ -198,7 +198,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-
+  margin-top: 64px;
   display: flex;
   align-items: center;
 
